<resources>
    <string name="app_name">MinuteMinutiae</string>
    <string name="welcome">Welcome!</string>
    <string name="single_quiz">Single Quiz</string>
    <string name="tournament">Tournament</string>
    <string name="my_quizzes">My Quizzes</string>
    <string name="press_your_button_when_ready">Press Your Button When Ready!</string>
    <string name="questionmark">questionmark</string>
    <string name="settings_title">Settings</string>
    <string name="num_of_questions">Number of questions: </string>
    <string name="answer_penalty">Wrong answer penalty: </string>
    <string name="round_timer">Round timer: </string>
    <string name="save_button">Save changes</string>
    <string name="setting_button">Setting Button</string>
    <string name="placeholder">placeholder</string>
    <string name="correct">Correct!</string>
    <string name="go_to_the_next_question">Go to the next question.</string>
    <string name="the_winner_is">The Winner is:</string>
    <string name="player1">Player1</string>
    <string name="home">Home</string>
    <string name="textview">TextView</string>
    <string name="_15">15</string>
    <string name="_5">5</string>
    <string name="_10">10</string>
</resources>
