<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="end">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="75dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/singleQuizButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_quiz"
        android:textSize="24sp" />

    <Button
        android:id="@+id/tournamentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/tournament"
        android:textSize="24sp" />

    <Button
        android:id="@+id/myQuizzesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/my_quizzes"
        android:textSize="24sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:srcCompat="@drawable/settingicon"
        android:background="@android:color/white"/>

</LinearLayout>