<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="411dp"
        android:layout_height="368dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="178dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/numOfQuestions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/num_of_questions"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/numQuestionsText"
                        android:layout_width="164dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />
                </TableRow>

            </TableLayout>

            <Switch
                android:id="@+id/penaltySwitch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:switchPadding="2dp"
                android:text="@string/answer_penalty"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/timerSwitch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:switchPadding="5dp"
                android:text="@string/round_timer"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>